Sostituisci i pulsanti di disponibilità con badge per migliorare lo stile e la coerenza visiva

--- a/index.html
+++ b/index.html
@@ -86,9 +86,8 @@
                                 <td class="w-50">I pilastri della terra</td>
                                 <td class="d-none d-md-table-cell">-</td>
                                 <td>
-                                    <button type="button"
-                                        class="btn btn-success btn-sm py-0 rounded text-white fw-semibold">
-                                        Disponibile</button>
+                                    <span class="badge bg-success fw-semibold ">
+                                        Disponibile</span>
                                 </td>
                                 <td class="d-flex justify-content-center gap-2"><button type="button"
                                         class="btn btn-outline-secondary "><i class="fa fa-pencil "
@@ -104,9 +103,8 @@
                                 <td class="w-50">I promessi sposi</td>
                                 <td class="d-none d-md-table-cell">-</td>
                                 <td>
-                                    <button type="button"
-                                        class="btn btn-success btn-sm py-0 rounded text-white fw-semibold">
-                                        Disponibile</button>
+                                    <span class="badge bg-success fw-semibold ">
+                                        Disponibile</span>
                                 </td>
                                 <td class="d-flex justify-content-center gap-2"><button type="button"
                                         class="btn btn-outline-secondary "><i class="fa fa-pencil "
@@ -122,9 +120,8 @@
                                 <td class="w-50">Il signore degli anelli</td>
                                 <td class="d-none d-md-table-cell">18/10/2023</td>
                                 <td>
-                                    <button type="button"
-                                        class="btn btn-warning btn-sm py-0 rounded text-white fw-semibold">
-                                        In prestito</button>
+                                    <span class="badge bg-warning fw-semibold ">
+                                        in prestito</span>
                                 </td>
                                 <td class="d-flex justify-content-center gap-2"><button type="button"
                                         class="btn btn-outline-secondary "><i class="fa fa-pencil "
@@ -140,9 +137,8 @@
                                 <td class="w-50">Harry Potter e la pietra Filosofale</td>
                                 <td class="d-none d-md-table-cell">-</td>
                                 <td>
-                                    <button type="button"
-                                        class="btn btn-success btn-sm py-0 rounded text-white fw-semibold ">
-                                        Disponibile</button>
+                                    <span class="badge bg-success fw-semibold ">
+                                        Disponibile</span>
                                 </td>
                                 <td class="d-flex justify-content-center gap-2"><button type="button"
                                         class="btn btn-outline-secondary "><i class="fa fa-pencil "
@@ -158,9 +154,8 @@
                                 <td class="w-50">Il codice Da Vinci</td>
                                 <td class="d-none d-md-table-cell">-</td>
                                 <td>
-                                    <button type="button"
-                                        class="btn btn-danger btn-sm py-0 rounded text-white fw-semibold">
-                                        Non disponibile</button>
+                                    <span class="badge bg-danger fw-semibold ">
+                                        Non Disponibile</span>
                                 </td>
                                 <td class="d-flex justify-content-center gap-2"><button type="button"
                                         class="btn btn-outline-secondary "><i class="fa fa-pencil "
@@ -176,9 +171,8 @@
                                 <td class="w-50">Shining</td>
                                 <td class="d-none d-md-table-cell">-</td>
                                 <td>
-                                    <button type="button"
-                                        class="btn btn-success btn-sm py-0  rounded text-white fw-semibold">
-                                        Disponibile</button>
+                                    <span class="badge bg-success fw-semibold ">
+                                        Disponibile</span>
                                 </td>
                                 <td class="d-flex justify-content-center gap-2"><button type="button"
                                         class="btn btn-outline-secondary "><i class="fa fa-pencil "
@@ -194,9 +188,8 @@
                                 <td class="w-50">La divina commedia</td>
                                 <td class="d-none d-md-table-cell">21/09/2023</td>
                                 <td>
-                                    <button type="button"
-                                        class="btn btn-warning btn-sm py-0 rounded text-white fw-semibold ">
-                                        In prestito</button>
+                                    <span class="badge bg-warning fw-semibold ">
+                                        In prestito</span>
                                 </td>
                                 <td class="d-flex justify-content-center gap-2"><button type="button"
                                         class="btn btn-outline-secondary "><i class="fa fa-pencil "
@@ -212,9 +205,8 @@
                                 <td class="w-50">Il trono di spade</td>
                                 <td class="d-none d-md-table-cell">-</td>
                                 <td>
-                                    <button type="button"
-                                        class="btn btn-success btn-sm py-0 rounded text-white fw-semibold ">
-                                        Disponibile</button>
+                                    <span class="badge bg-success fw-semibold ">
+                                        Disponibile</span>
                                 </td>
                                 <td class="d-flex justify-content-center gap-2"><button type="button"
                                         class="btn btn-outline-secondary "><i class="fa fa-pencil "
@@ -230,9 +222,8 @@
                                 <td class="w-50">Il mondo di Sofia</td>
                                 <td class="d-none d-md-table-cell">-</td>
                                 <td>
-                                    <button type="button"
-                                        class="btn btn-danger btn-sm py-0 rounded text-white fw-semibold">
-                                        Non disponibile</button>
+                                    <span class="badge bg-danger fw-semibold ">
+                                        Non Disponibile</span>
                                 </td>
                                 <td class="d-flex justify-content-center gap-2"><button type="button"
                                         class="btn btn-outline-secondary "><i class="fa fa-pencil "
@@ -248,9 +239,8 @@
                                 <td class="w-50">Le cronache di Narnia: il leone, la strega e l'armadio</td>
                                 <td class="d-none d-md-table-cell">25/07/2023</td>
                                 <td>
-                                    <button type="button"
-                                        class="btn btn-warning btn-sm py-0 rounded text-white fw-semibold ">
-                                        In prestito</button>
+                                    <span class="badge bg-warning fw-semibold ">
+                                        In prestito</span>
                                 </td>
                                 <td class="d-flex justify-content-center gap-2"><button type="button"
                                         class="btn btn-outline-secondary "><i class="fa fa-pencil "
@@ -266,9 +256,8 @@
                                 <td class="w-50">Il piccolo Principe</td>
                                 <td class="d-none d-md-table-cell">-</td>
                                 <td>
-                                    <button type="button"
-                                        class="btn btn-success btn-sm py-0 rounded text-white fw-semibold">
-                                        Disponibile</button>
+                                    <span class="badge bg-success fw-semibold ">
+                                        Disponibile</span>
                                 </td>
                                 <td class="d-flex justify-content-center gap-2"><button type="button"
                                         class="btn btn-outline-secondary "><i class="fa fa-pencil "
@@ -284,9 +273,8 @@
                                 <td class="w-50">la storia infinita</td>
                                 <td class="d-none d-md-table-cell">-</td>
                                 <td>
-                                    <button type="button"
-                                        class="btn btn-success btn-sm py-0 rounded text-white fw-semibold  ">
-                                        Disponibile</button>
+                                    <span class="badge bg-success fw-semibold ">
+                                        Disponibile</span>
                                 </td>
                                 <td class="d-flex justify-content-center gap-2"><button type="button"
                                         class="btn btn-outline-secondary "><i class="fa fa-pencil "
