--- a/bonus/page_form.html
+++ b/bonus/page_form.html
@@ -25,7 +25,8 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
             <div class="container-fluid ">
-                <a class="navbar-brand w-65" href="#"><img src="./../img/duck.png" alt="logo" style="width: 60px;"></a>
+                <a class="navbar-brand w-65" href="../index.html"><img src="./../img/duck.png" alt="logo"
+                        style="width: 60px;"></a>
                 <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -118,12 +119,14 @@
 
 
             </div>
-            <div class="check"></div>
+            <div class="check">
+
+            </div>
 
         </div>
     </main>
     <footer>
-        <!-- place footer here -->
+
     </footer>
     <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
