--- a/bonus/index.html
+++ b/bonus/index.html
@@ -25,7 +25,8 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
             <div class="container-fluid ">
-                <a class="navbar-brand w-65" href=""><img src="./img/duck.png" alt="logo" style="width: 60px;"></a>
+                <a class="navbar-brand w-65" href="index.html"><img src="./img/duck.png" alt="logo"
+                        style="width: 60px;"></a>
                 <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -70,7 +71,8 @@
                 <div class="col-12 col-sm-12 col-md-12- col-lg-8">
                     <div class="title_row pb-5 d-flex justify-content-between align-items-center">
                         <h1>Catalogo Libri</h1>
-                        <div class="button"><a class="btn btn-primary" href="" role="button">Aggiungi Libro</a></div>
+                        <div class="button"><a class="btn btn-primary" href="bonus/page_form.html"
+                                role="button">Aggiungi Libro</a></div>
                     </div>
                     <table class="table table-striped ">
                         <thead>
