Correggi i percorsi dei link nella navbar e nel pulsante "Aggiungi Libro"

--- a/bonus/page_form.html
+++ b/bonus/page_form.html
@@ -25,7 +25,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
             <div class="container-fluid ">
-                <a class="navbar-brand w-65" href="../index.html"><img src="./../img/duck.png" alt="logo"
+                <a class="navbar-brand w-65" href="index.html"><img src="./img/duck.png" alt="logo"
                         style="width: 60px;"></a>
                 <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
