--- a/bonus/index.html
+++ b/bonus/index.html
@@ -71,8 +71,8 @@
                 <div class="col-12 col-sm-12 col-md-12- col-lg-8">
                     <div class="title_row pb-5 d-flex justify-content-between align-items-center">
                         <h1>Catalogo Libri</h1>
-                        <div class="button"><a class="btn btn-primary" href="bonus/page_form.html"
-                                role="button">Aggiungi Libro</a></div>
+                        <div class="button"><a class="btn btn-primary" href="page_form.html" role="button">Aggiungi
+                                Libro</a></div>
                     </div>
                     <table class="table table-striped ">
                         <thead>
