--- a/bonus/page_form.html
+++ b/bonus/page_form.html
@@ -71,17 +71,17 @@
 
             <div class="row">
                 <div class="col-6 col-sm-6">
-                    <div class="form-label">Nome Autore</div>
+                    <label for="InputAuthorName" class="form-label">Nome Autore</label>
                     <input type="text" class="form-control" placeholder="Inserisci il nome dell'autore" required>
                 </div>
                 <div class="col-6 col-sm-6">
-                    <div class="form-label">Cognome Autore</div>
+                    <label for="InputAuthorLastName" class="form-label">Cognome Autore</label>
                     <input type="text" class="form-control" placeholder="Inserisci il cognome dell'autore">
                 </div>
                 <div class="col-12 col-sm-12 py-2">
-                    <div class="form-label">Titolo</div>
+                    <label for="InputTitleBook" class="form-label">Titolo</label>
                     <input type="text" class="form-control" placeholder="Inserisci il titolo del libro">
-                    <div class="form-label">Titolo versione italiana</div>
+                    <span class="text-secondary">Titolo versione italiana</span>
                 </div>
 
 
@@ -99,28 +99,32 @@
 
                 </div>
                 <div class="col">
-                    <div class="form-label">Anno di Pubblicazzione</div>
+                    <label for="InputYearPublication" class="form-label">Anno di Pubblicazzione</label>
                     <input type="date" class="form-control" placeholder="Inserisci l'anno">
 
                 </div>
                 <div class="col">
-                    <div class="form-label">ISBN#</div>
+                    <label for="InputCode" class="form-label">ISBN#</label>
                     <input type="number" class="form-control" placeholder="Inserisci il codice ISBN#">
 
                 </div>
 
             </div>
             <div class="row">
-                <div class="form-floating p-3">
+                <div class="col-12 form-floating p-3">
 
                     <textarea class="form-control" placeholder="Inseros" style="height: 100px"></textarea>
-                    <label for="">Note</label>
+                    <label for="InputText">Note</label>
                 </div>
 
 
             </div>
-            <div class="check">
-
+            <div class="check col-12">
+                <div class="mb-3 form-check">
+                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                    <label class="form-check-label" for="exampleCheck1">Disponibile anche in digitale</label>
+                </div>
+                <button type="submit" class="btn btn-primary">Aggiungi Libro</button>
             </div>
 
         </div>
